--- a/composer.json
+++ b/composer.json
@@ -12,13 +12,13 @@
     "require": {
         "php": "^8.0",
         "topthink/framework": "^6.0",
-        "topthink/think-orm": "^2.0",
         "topthink/think-captcha": "^3.0",
-        "topthink/think-swoole": "3.0.x-dev",
-        "topthink/think-view": "^1.0",
-        "topthink/think-queue": "^3.0",
+        "topthink/think-image": "^1.0",
         "topthink/think-migration": "^3.0",
-        "topthink/think-image": "^1.0"
+        "topthink/think-orm": "^2.0",
+        "topthink/think-queue": "^3.0",
+        "topthink/think-swoole": "3.0.x-dev",
+        "topthink/think-view": "^1.0"
     },
     "require-dev": {
         "symfony/var-dumper": "^4.4"
