--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "topthink/think-migration": "^3.0",
         "topthink/think-orm": "^2.0",
         "topthink/think-queue": "^3.0",
-        "topthink/think-swoole": "3.0.x-dev",
+        "topthink/think-swoole": "^4.0",
         "topthink/think-view": "^1.0"
     },
     "require-dev": {
