--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,12 @@
     "homepage": "http://thinkphp.cn/",
     "license": "Apache-2.0",
     "require": {
-        "php": ">=5.3.0"
+        "php": "^5.3"
     },
     "autoload": {
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "app/",
+            "Think\\": "bootstrap/src"
         }
     },
     "config": {
